# core

./: .gitignore
demo/: README.md  analysis.ipynb  client.py  demo_manager.py  microphone_module.py  pyproject.toml  recorder_module.py  run_demo.sh  server.py
nats/: README.md  pyproject.toml
nats/odin/: __init__.py
nats/odin/nats/: __init__.py  base.py  observability.py
proto/: README.md  buf.gen.yaml  buf.yaml
proto/odin/v1/: audio.proto  common.proto  flow.proto  options.proto  session.proto  speech.proto  state.proto  system.proto  text.proto  text_helper.proto  tools.proto
