[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "nats-py>=2",
    "numpy>=2.2.6",
    "odin-proto",
    "protobuf>=6.31.1",
    "sounddevice>=0.5.2",
]

[tool.uv.sources]
odin-proto = { path = "../proto/gen/python", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
